2015-05-22 Roman
- SYS: Targets "*-lzma" into Makefile.am fixed for force using LZMA by --use-compress-program=lzma but argument --lzma often uses XZ.
    {debian,debian_mod}/changelog, *.spec: Work version scheme naming set to 0.9+rNNNN for adapt to the AutoBuilder,
	allow next update to 0.9.N and the Work version's SVN revision present into the program binary.
    {debian,debian_mod}/rules: Autoreconf call by dh_autoreconf restored.
    data/openscada_start.in: "subst" command using, as the ALTLinux specific, replaced to generic "sed".
- FIX:DB.FireBird: Configure template AX_LIB_FIREBIRD adapted for configure and build that with 64bit libraries, like Mandriva64.


2015-05-15 Roman
- SYS: Source distributive build targets distSrc-xz and distRes-xz added. All build's files moved to using source packeges packed XZ.
- FIX.Transport.Sockets: Wait the connection timeout into the initiative mode fixed by the socket switch to O_NONBLOCK.


2015-05-13 fido_max
- DAQ.Fastwel: FBUS SDK updated to 2.301


2015-05-11 Roman
- Archiver.FSArch: Yet one place using delFile() set.
- DAQ.{DAQGate,JavaLikeCalc,OPC_UA,SoundCard}: Some translations fixed.
- FIX:UI.VCAEngine: Link to widget's attribute from the wiget by "wdg:a_XXX" prevented from crash into generic status.


2015-05-09 Roman
- !!:FIX:Archiver.FSArch: Removing *.info files for different pack mode is fixed.
    Tab "Files" is added for the messages and the values with information about the archive's files.
- FIX:UI.WebCfgD: Title's null value fix for helps.
- SYS: *.spec: Field "Release" set to template rNNNN.
- DB: DB object's fields "DESCR" and "ADDR" size rose to 2000 and 1000, respectively.
- !!:FIX:Archiver.FSArch: Free storage space lack checking added for prevent hang and data lost for messages and values.
- FIX:DB.SQLite: Adapted to the keys description as the key position number.
- DAQ.{DCON,ICP_DAS,ModBus}: Error messages expanded to addition different errors per tries.