@@ -1,3 +1,8 @@
+2015-05-24 Roman
+- FIX:Archive.FSArch: Some original messages fixed.
+- FIX:DAQ.ICP_DAS: Build on ARM fixed.
+
+
 2015-05-22 Roman
 - SYS: Targets "*-lzma" into Makefile.am fixed for force using LZMA by --use-compress-program=lzma but argument --lzma often uses XZ.
     {debian,debian_mod}/changelog, *.spec: Work version scheme naming set to 0.9+rNNNN for adapt to the AutoBuilder,
